edited to work with latest version of westerintnet, checked for python 3.6.5

--- a/postreise/analyze/demo/transmission_analysis_demo.ipynb
+++ b/postreise/analyze/demo/transmission_analysis_demo.ipynb
@@ -13,23 +13,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "import os\n",
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "import westernintnet\n",
-    "\n",
-    "import transmission"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -42,25 +25,31 @@
       "Loading branches\n",
       "Loading resources\n",
       "Loading net_generation\n",
-      "Load solar data\n",
-      "Load wind data\n",
-      "Load hydro data\n",
-      "Load demand data\n",
       "Done loading\n"
      ]
     }
    ],
    "source": [
-    "wecc = westernintnet.WesternIntNet()"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "from westernintnet.westernintnet import win_data\n",
+    "\n",
+    "import transmission"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir1 = os.path.join('..','test','data')"
+    "dir1 = os.path.join('..','test','data')\n",
+    "dir2 = 'your_save_folder'"
    ]
   },
   {
@@ -72,37 +61,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PF = pd.read_pickle(dir1 + '/' + 'power flow pkl file')"
+    "PF = pd.read_pickle(dir1 + '/' + 'your_powerflow_pickel_file.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wecc.PF_base = PF\n",
-    "wecc.branches.index = PF.columns\n",
+    "win_data.PF_base = PF\n",
+    "win_data.branches.index = PF.columns\n",
     "\n",
     "#Create Capacity column; Note that rateA == 0 represents low impedance lines\n",
     "#Denoting rateA==0 is simply a signal to MatPower that there are no current constraints on the line.\n",
-    "wecc.branches.loc[wecc.branches.rateA != 0, 'Capacity'] = wecc.branches['rateA']\n",
-    "wecc.branches.loc[wecc.branches.rateA == 0, 'Capacity'] = 99999.\n",
+    "win_data.branches.loc[win_data.branches.rateA != 0, 'Capacity'] = win_data.branches['rateA']\n",
+    "win_data.branches.loc[win_data.branches.rateA == 0, 'Capacity'] = 99999.\n",
     "\n",
     "#Normalize power flow values to line capacity\n",
-    "wecc.congestion_base = wecc.PF_base.div(wecc.branches['Capacity']).apply(np.abs)  \n",
+    "win_data.congestion_base = win_data.PF_base.div(win_data.branches['Capacity']).apply(np.abs)  \n",
     "\n",
     "#Create congestion statistics file\n",
-    "wecc.congestion_stats_base = transmission.generate_cong_stats(wecc.congestion_base, wecc.branches, dir1 + '/' + 'congestion_stats_base_demo')"
+    "win_data.congestion_stats_base = transmission.generate_cong_stats(win_data.congestion_base, win_data.branches, dir2 + '/' + 'congestion_stats_base_demo')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -326,13 +315,13 @@
        "10418          21           37  13.890  3.641426  0.000136  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wecc.congestion_stats_base.loc[wecc.congestion_stats_base['pvalue']<0.05].sort_values(['pvalue', 'zscore'], ascending=False).head(10)"
+    "win_data.congestion_stats_base.loc[win_data.congestion_stats_base['pvalue']<0.05].sort_values(['pvalue', 'zscore'], ascending=False).head(10)"
    ]
   },
   {
