updated for latest westerintnet, checked to run in py 3.6.5

--- a/postreise/analyze/demo/Collect_congested_branches_partially_automated_version.ipynb
+++ b/postreise/analyze/demo/Collect_congested_branches_partially_automated_version.ipynb
@@ -11,22 +11,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "import os\n",
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "\n",
-    "import westernintnet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -39,16 +23,28 @@
       "Loading branches\n",
       "Loading resources\n",
       "Loading net_generation\n",
-      "Load solar data\n",
-      "Load wind data\n",
-      "Load hydro data\n",
-      "Load demand data\n",
       "Done loading\n"
      ]
     }
    ],
    "source": [
-    "wecc = westernintnet.WesternIntNet()"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "from westernintnet.westernintnet import win_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wecc = win_data"
    ]
   },
   {
@@ -258,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
