--- a/postreise/analyze/demo/Collect_CA_congested_branches.ipynb
+++ b/postreise/analyze/demo/Collect_CA_congested_branches.ipynb
@@ -11,22 +11,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "import os\n",
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "\n",
-    "import westernintnet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -39,16 +23,28 @@
       "Loading branches\n",
       "Loading resources\n",
       "Loading net_generation\n",
-      "Load solar data\n",
-      "Load wind data\n",
-      "Load hydro data\n",
-      "Load demand data\n",
       "Done loading\n"
      ]
     }
    ],
    "source": [
-    "wecc = westernintnet.WesternIntNet()"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "from westernintnet.westernintnet import win_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wecc = win_data"
    ]
   },
   {
@@ -188,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +318,7 @@
        "2771         311        1171         1490   0.0  177.326160  0.000000e+00  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +363,7 @@
        "Name: 2707, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
