--- a/postreise/analyze/demo/transmission_analysis_demo.ipynb
+++ b/postreise/analyze/demo/transmission_analysis_demo.ipynb
@@ -15,6 +15,15 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\program files\\python\\python36\\lib\\site-packages\\matplotlib\\__init__.py:886: MatplotlibDeprecationWarning: \n",
+      "examples.directory is deprecated; in the future, examples will be found relative to the 'datapath' directory.\n",
+      "  \"found relative to the 'datapath' directory.\".format(key))\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -33,23 +42,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "import os\n",
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "\n",
-    "from westernintnet.westernintnet import win_data\n",
-    "\n",
-    "import transmission"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir1 = os.path.join('..','test','data')\n",
-    "dir2 = 'your_save_folder'"
+    "from postreise.analyze import transmission\n",
+    "from postreise.process import transferdata as td\n",
+    "from westernintnet.westernintnet import win_data"
    ]
   },
   {
@@ -61,37 +56,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Use  C:\\Users\\brdo\\scenario_data\\  to save/load local scenario data.\n"
+     ]
+    }
+   ],
+   "source": [
+    "od = td.OutputData()\n",
+    "pf = od.get_data('western_scenario_Update01', 'PF')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PF = pd.read_pickle(dir1 + '/' + 'your_powerflow_pickel_file.pkl')"
+    "win_data.pf_base = pf\n",
+    "win_data.branches.index = pf.columns\n",
+    "\n",
+    "# Create Capacity column; Note that rateA == 0 represents low impedance lines\n",
+    "# Denoting rateA==0 is simply a signal to MatPower that there are no current constraints on the line.\n",
+    "win_data.branches.loc[win_data.branches.rateA != 0, 'Capacity'] = win_data.branches['rateA']\n",
+    "win_data.branches.loc[win_data.branches.rateA == 0, 'Capacity'] = 99999.\n",
+    "\n",
+    "# Normalize power flow values to line capacity\n",
+    "win_data.congestion_base = win_data.pf_base.div(win_data.branches['Capacity']).apply(np.abs)  \n",
+    "\n",
+    "# Create congestion statistics file\n",
+    "win_data.congestion_stats_base = transmission.generate_cong_stats(win_data.congestion_base,\n",
+    "                                                                  win_data.branches,\n",
+    "                                                                  '../data/congestion_stats_base_demo')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "win_data.PF_base = PF\n",
-    "win_data.branches.index = PF.columns\n",
-    "\n",
-    "#Create Capacity column; Note that rateA == 0 represents low impedance lines\n",
-    "#Denoting rateA==0 is simply a signal to MatPower that there are no current constraints on the line.\n",
-    "win_data.branches.loc[win_data.branches.rateA != 0, 'Capacity'] = win_data.branches['rateA']\n",
-    "win_data.branches.loc[win_data.branches.rateA == 0, 'Capacity'] = 99999.\n",
-    "\n",
-    "#Normalize power flow values to line capacity\n",
-    "win_data.congestion_base = win_data.PF_base.div(win_data.branches['Capacity']).apply(np.abs)  \n",
-    "\n",
-    "#Create congestion statistics file\n",
-    "win_data.congestion_stats_base = transmission.generate_cong_stats(win_data.congestion_base, win_data.branches, dir2 + '/' + 'congestion_stats_base_demo')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,144 +150,144 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2952</th>\n",
-       "      <td>11</td>\n",
+       "      <th>12226</th>\n",
+       "      <td>392</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>34</td>\n",
        "      <td>0</td>\n",
-       "      <td>28</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1.652440</td>\n",
-       "      <td>0.049222</td>\n",
+       "      <td>6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.615872</td>\n",
+       "      <td>4.449990e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9583</th>\n",
-       "      <td>246</td>\n",
+       "      <th>11438</th>\n",
+       "      <td>169</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30</td>\n",
-       "      <td>27.471</td>\n",
-       "      <td>2.094437</td>\n",
-       "      <td>0.018111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12376</th>\n",
-       "      <td>170</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>30</td>\n",
-       "      <td>45.728</td>\n",
-       "      <td>2.094437</td>\n",
-       "      <td>0.018111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6541</th>\n",
-       "      <td>208</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>31</td>\n",
-       "      <td>4.209</td>\n",
-       "      <td>2.315435</td>\n",
-       "      <td>0.010295</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7385</th>\n",
-       "      <td>167</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>2.757432</td>\n",
-       "      <td>0.002913</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10338</th>\n",
-       "      <td>151</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>26</td>\n",
-       "      <td>2</td>\n",
        "      <td>7</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>2.757432</td>\n",
-       "      <td>0.002913</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1547</th>\n",
-       "      <td>187</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>35</td>\n",
-       "      <td>31.502</td>\n",
-       "      <td>3.199429</td>\n",
-       "      <td>0.000689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11469</th>\n",
-       "      <td>51</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>3.199429</td>\n",
-       "      <td>0.000689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6364</th>\n",
-       "      <td>185</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36</td>\n",
-       "      <td>18.838</td>\n",
-       "      <td>3.420427</td>\n",
-       "      <td>0.000313</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10418</th>\n",
-       "      <td>150</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>18</td>\n",
        "      <td>17</td>\n",
-       "      <td>16</td>\n",
-       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>25</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.004657</td>\n",
+       "      <td>1.329401e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11668</th>\n",
+       "      <td>279</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>42</td>\n",
+       "      <td>53.208235</td>\n",
+       "      <td>3.004657</td>\n",
+       "      <td>1.329401e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10335</th>\n",
+       "      <td>476</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46</td>\n",
+       "      <td>48.364319</td>\n",
+       "      <td>3.782227</td>\n",
+       "      <td>7.771575e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9877</th>\n",
+       "      <td>214</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>49</td>\n",
+       "      <td>44.630752</td>\n",
+       "      <td>4.365404</td>\n",
+       "      <td>6.344391e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11106</th>\n",
+       "      <td>567</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>43</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>49</td>\n",
+       "      <td>111.365148</td>\n",
+       "      <td>4.365404</td>\n",
+       "      <td>6.344391e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3561</th>\n",
+       "      <td>222</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3</td>\n",
        "      <td>21</td>\n",
-       "      <td>37</td>\n",
-       "      <td>13.890</td>\n",
-       "      <td>3.641426</td>\n",
-       "      <td>0.000136</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1.709758</td>\n",
+       "      <td>4.559797</td>\n",
+       "      <td>2.560157e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5603</th>\n",
+       "      <td>268</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>51</td>\n",
+       "      <td>43.555793</td>\n",
+       "      <td>4.754189</td>\n",
+       "      <td>9.962218e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11107</th>\n",
+       "      <td>497</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>58</td>\n",
+       "      <td>19.233258</td>\n",
+       "      <td>6.114936</td>\n",
+       "      <td>4.829778e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6340</th>\n",
+       "      <td>231</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>61</td>\n",
+       "      <td>3.461302</td>\n",
+       "      <td>6.698114</td>\n",
+       "      <td>1.055633e-11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -290,38 +296,39 @@
       "text/plain": [
        "       Capacity  hutil1  hutil0p9-1  hutil0p8-0p9  hutil0p75-0p8  hutil>=0p9  \\\n",
        "line                                                                           \n",
-       "2952         11       0           0             0             28           0   \n",
-       "9583        246       0           0             0             30           0   \n",
-       "12376       170       0           0            10             20           0   \n",
-       "6541        208       0           0             1             30           0   \n",
-       "7385        167       0           0             0             33           0   \n",
-       "10338       151       0           2             5             26           2   \n",
-       "1547        187       0           1            14             20           1   \n",
-       "11469        51       0           0             0             35           0   \n",
-       "6364        185       0           0             0             36           0   \n",
-       "10418       150       0           4            17             16           4   \n",
+       "12226       392       0           0             6             34           0   \n",
+       "11438       169       0           7            18             17           7   \n",
+       "11668       279       0           0             2             40           0   \n",
+       "10335       476       0           0             1             45           0   \n",
+       "9877        214       0           0            27             22           0   \n",
+       "11106       567       0           0             6             43           0   \n",
+       "3561        222       0           3            18             29           3   \n",
+       "5603        268       0           0             4             47           0   \n",
+       "11107       497       0           0             6             52           0   \n",
+       "6340        231       0           0             6             55           0   \n",
        "\n",
-       "       hutil>=0p8  hutil>=0p75    dist    zscore    pvalue  \n",
-       "line                                                        \n",
-       "2952            0           28   0.000  1.652440  0.049222  \n",
-       "9583            0           30  27.471  2.094437  0.018111  \n",
-       "12376          10           30  45.728  2.094437  0.018111  \n",
-       "6541            1           31   4.209  2.315435  0.010295  \n",
-       "7385            0           33   0.000  2.757432  0.002913  \n",
-       "10338           7           33   0.000  2.757432  0.002913  \n",
-       "1547           15           35  31.502  3.199429  0.000689  \n",
-       "11469           0           35   0.000  3.199429  0.000689  \n",
-       "6364            0           36  18.838  3.420427  0.000313  \n",
-       "10418          21           37  13.890  3.641426  0.000136  "
+       "       hutil>=0p8  hutil>=0p75        dist    zscore        pvalue  \n",
+       "line                                                                \n",
+       "12226           6           40    0.000000  2.615872  4.449990e-03  \n",
+       "11438          25           42    0.000000  3.004657  1.329401e-03  \n",
+       "11668           2           42   53.208235  3.004657  1.329401e-03  \n",
+       "10335           1           46   48.364319  3.782227  7.771575e-05  \n",
+       "9877           27           49   44.630752  4.365404  6.344391e-06  \n",
+       "11106           6           49  111.365148  4.365404  6.344391e-06  \n",
+       "3561           21           50    1.709758  4.559797  2.560157e-06  \n",
+       "5603            4           51   43.555793  4.754189  9.962218e-07  \n",
+       "11107           6           58   19.233258  6.114936  4.829778e-10  \n",
+       "6340            6           61    3.461302  6.698114  1.055633e-11  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "win_data.congestion_stats_base.loc[win_data.congestion_stats_base['pvalue']<0.05].sort_values(['pvalue', 'zscore'], ascending=False).head(10)"
+    "win_data.congestion_stats_base.loc[win_data.congestion_stats_base['pvalue'] < 0.05].sort_values(\n",
+    "    ['pvalue', 'zscore'], ascending=False).head(10)"
    ]
   },
   {
@@ -348,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7rc2"
   }
  },
  "nbformat": 4,
