revised comments to make the output usage clearer

--- a/postreise/analyze/demo/Collect_congested_branches_use_input_table_demo.ipynb
+++ b/postreise/analyze/demo/Collect_congested_branches_use_input_table_demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Notebook used to generate list of congested branches: read requirements from input table, then generate desired output and copy to accessible location. "
+    "### Notebook used to generate list of congested branches: read requirements from input table, then generate desired output and copy to accessible location. The output file is used as input to the simulation, which has the ability to change branch properties from inside Matpower."
    ]
   },
   {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
