feat: Make notebook standalone

--- a/postreise/analyze/demo/Collect_congested_branches_use_input_table_demo.ipynb
+++ b/postreise/analyze/demo/Collect_congested_branches_use_input_table_demo.ipynb
@@ -13,6 +13,15 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\program files\\python\\python36\\lib\\site-packages\\matplotlib\\__init__.py:886: MatplotlibDeprecationWarning: \n",
+      "examples.directory is deprecated; in the future, examples will be found relative to the 'datapath' directory.\n",
+      "  \"found relative to the 'datapath' directory.\".format(key))\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -28,23 +37,13 @@
     }
    ],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import os\n",
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "\n",
+    "from postreise.analyze import transmission\n",
+    "from postreise.process import transferdata as td\n",
     "from westernintnet.westernintnet import win_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wecc = win_data"
    ]
   },
   {
@@ -57,18 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datadir = os.path.join('..','data/')\n",
-    "infofile_name = 'TransmissionCongestionInfo' + '.csv'\n",
-    "df = pd.read_csv(os.path.join(datadir, infofile_name), header=0, index_col = 'ID')"
+    "df = pd.read_csv(\"../data/TransmissionCongestionInfo.csv\", header=0, index_col = 'ID')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +146,7 @@
        "2   congestion_CA_only_california2030Test01_zscore...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,23 +165,27 @@
     "# To do: generalize to any zone; needs a lookup table for region-loadzone designation.\n",
     "\n",
     "CA_zones = [3,4,5,6,7]\n",
-    "CA_buses = wecc.bus.loc[wecc.bus['area'].isin(CA_zones)]\n",
-    "CA_branches = wecc.branches.loc[(wecc.branches['tbus'].isin(CA_buses['busID'])) \n",
-    "                              & (wecc.branches['fbus'].isin(CA_buses['busID']))]\n",
+    "CA_buses = win_data.bus.loc[win_data.bus['area'].isin(CA_zones)]\n",
+    "CA_branches = win_data.branches.loc[(win_data.branches['tbus'].isin(CA_buses['busID'])) & \n",
+    "                                    (win_data.branches['fbus'].isin(CA_buses['busID']))]\n",
     "\n",
     "fix_list = df.Source_Scenario_ID.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
+      "Reading ../data/congestion_stats_california2020Test01.csv\n",
       "california2020Test01 51\n",
+      "2\n",
+      "Reading ../data/congestion_stats_california2030Test01.csv\n",
       "california2030Test01 129\n"
      ]
     }
@@ -197,26 +198,43 @@
     "# eventually, s may be used as source scenario for other outputs\n",
     "\n",
     "for i in df.index:\n",
-    "    s = df.loc[i]['Source_Scenario_ID']\n",
-    "    congestion_source = datadir + 'congestion_' + s +'.csv'\n",
-    "    congestion_dfs[s] = pd.read_csv(congestion_source)  \n",
-    "    CA_fix_congestion[s] = congestion_dfs[s].loc[(congestion_dfs[s]['line'].isin(CA_branches.index)) \n",
-    "                                                 & (congestion_dfs[s]['zscore']>=1)]\n",
-    "    out_filename1 = datadir + df.loc[i]['Filename']  \n",
-    "    \n",
-    "    # group-accessible folder\n",
-    "    out_filename2 = df.loc[i]['File_Location'] + df.loc[i]['Filename']  \n",
+    "    print(i)\n",
+    "    scenario = df.loc[i]['Source_Scenario_ID']\n",
+    "    congestion_source = \"../data/congestion_stats_\" + scenario\n",
+    "    print(\"Reading %s.csv\" % congestion_source)\n",
+    "    try:\n",
+    "        congestion_df = pd.read_csv(congestion_source + '.csv', index_col=0)\n",
+    "    except FileNotFoundError:\n",
+    "        print('Congestion file not found. Will generate it.')\n",
+    "        od = td.OutputData()\n",
+    "        pf = od.get_data(scenario, 'PF')\n",
+    "        win_data.pf_base = pf\n",
+    "        win_data.branches.index = pf.columns\n",
     "\n",
-    "    if not os.path.exists(out_filename1):\n",
-    "        CA_fix_congestion[s].to_csv(out_filename1)\n",
+    "        win_data.branches.loc[win_data.branches.rateA != 0, 'Capacity'] = win_data.branches['rateA']\n",
+    "        win_data.branches.loc[win_data.branches.rateA == 0, 'Capacity'] = 99999.\n",
+    "\n",
+    "        win_data.congestion_base = win_data.pf_base.div(win_data.branches['Capacity']).apply(np.abs)  \n",
+    "\n",
+    "        congestion_df = transmission.generate_cong_stats(win_data.congestion_base, \n",
+    "                                                         win_data.branches,\n",
+    "                                                         congestion_source)\n",
+    "\n",
     "    \n",
-    "    #To do: \n",
-    "    # Copy to group accessible server folder\n",
-    "    # Put in a check for whether the server L folder is mounted\n",
-    "    #if not os.path.exists(out_filename2):\n",
-    "    #    CA_fix_congestion[s].to_csv(out_filename2)\n",
+    "    congestion_dfs[scenario] = congestion_df  \n",
+    "    CA_fix_congestion[scenario] = congestion_dfs[scenario].loc[\n",
+    "        (congestion_dfs[scenario].index.isin(CA_branches.index)) & \n",
+    "        (congestion_dfs[scenario]['zscore'] >=1)]\n",
+    "    \n",
+    "    filename = '../data/' + df.loc[i]['Filename']  \n",
+    "    \n",
+    "    # To write in the group-accessible folder\n",
+    "    # filename = df.loc[i]['File_Location'] + df.loc[i]['Filename']  \n",
+    "\n",
+    "    if not os.path.exists(filename):\n",
+    "        CA_fix_congestion[scenario].to_csv(filename)\n",
     "                \n",
-    "    print(s, len(CA_fix_congestion[s]))"
+    "    print(scenario, len(CA_fix_congestion[scenario]))"
    ]
   },
   {
@@ -243,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7rc2"
   }
  },
  "nbformat": 4,
