refactor: Make code more flexible

--- a/postreise/analyze/demo/transmission_demo.ipynb
+++ b/postreise/analyze/demo/transmission_demo.ipynb
@@ -515,7 +515,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a287a748>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x129f012e8>"
       ]
      },
      "execution_count": 4,
@@ -577,13 +577,6 @@
    "source": [
     "plot_transmission.map_binding(utilization, grid.branch)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
