chore: move modules in respective folders

--- a/postreise/analyze/transmission/demo/utilization_demo.ipynb
+++ b/postreise/analyze/transmission/demo/utilization_demo.ipynb
@@ -60,23 +60,13 @@
       "SCENARIO: base | WACA_Anchor_AllMatchCA_2030_SpurUpgrade_OB_5_Mesh100x5\n",
       "\n",
       "--> State\n",
-      "analyze\n",
-      "--> Loading ct\n",
-      "--> Loading Western interconnect\n",
-      "Loading zone\n",
-      "Loading sub\n",
-      "Loading bus2sub\n",
-      "Loading bus\n",
-      "Loading plant\n",
-      "Loading plant cost\n",
-      "Loading branch\n",
-      "Loading DC line\n"
+      "analyze\n"
      ]
     }
    ],
    "source": [
-    "from postreise.analyze import transmission\n",
-    "from postreise.plot import plot_transmission_map\n",
+    "from postreise.analyze.transmission import utilization\n",
+    "from postreise.plot import plot_utilization_map\n",
     "from powersimdata.scenario.scenario import Scenario\n",
     "\n",
     "scenario = Scenario('224')"
@@ -94,15 +84,24 @@
      "output_type": "stream",
      "text": [
       "Calculating utilization\n",
-      "--> Loading PF\n"
+      "--> Loading PF\n",
+      "--> Loading grid\n",
+      "Loading bus\n",
+      "Loading plant\n",
+      "Loading heat_rate_curve\n",
+      "Loading gencost_before\n",
+      "Loading gencost_after\n",
+      "Loading branch\n",
+      "Loading sub\n",
+      "Loading bus2sub\n"
      ]
     }
    ],
    "source": [
     "from importlib import reload\n",
-    "reload(plot_transmission_map)\n",
-    "reload(transmission)\n",
-    "cong_all = transmission.generate_cong_stats(scenario)"
+    "reload(plot_utilization_map)\n",
+    "reload(utilization)\n",
+    "cong_all = utilization.generate_cong_stats(scenario)"
    ]
   },
   {
@@ -161,7 +160,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>67.451163</td>\n",
+       "      <td>67.442376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88210</th>\n",
@@ -176,7 +175,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>66.287123</td>\n",
+       "      <td>66.304016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88211</th>\n",
@@ -191,7 +190,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>67.686763</td>\n",
+       "      <td>67.708675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88212</th>\n",
@@ -206,7 +205,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>15.263467</td>\n",
+       "      <td>15.263146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88213</th>\n",
@@ -221,7 +220,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>21.817179</td>\n",
+       "      <td>21.840264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88214</th>\n",
@@ -236,7 +235,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>22.787503</td>\n",
+       "      <td>22.781041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88215</th>\n",
@@ -266,7 +265,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>30.717301</td>\n",
+       "      <td>30.714067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88217</th>\n",
@@ -296,7 +295,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>21.091352</td>\n",
+       "      <td>21.079976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88219</th>\n",
@@ -311,7 +310,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>14.522443</td>\n",
+       "      <td>14.498944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88220</th>\n",
@@ -326,7 +325,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>83.814628</td>\n",
+       "      <td>83.813702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88221</th>\n",
@@ -356,7 +355,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>33.196555</td>\n",
+       "      <td>33.212006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88223</th>\n",
@@ -371,7 +370,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>32.575626</td>\n",
+       "      <td>32.576129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88224</th>\n",
@@ -386,7 +385,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>12.339973</td>\n",
+       "      <td>12.310934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88225</th>\n",
@@ -401,7 +400,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>32.134112</td>\n",
+       "      <td>32.132279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88226</th>\n",
@@ -431,7 +430,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>44.945856</td>\n",
+       "      <td>44.933678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88228</th>\n",
@@ -446,7 +445,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>25.863792</td>\n",
+       "      <td>25.868391</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -476,26 +475,26 @@
        "88228  1237.08   Line               0.0        0.0        0.0        0      \n",
        "\n",
        "       risk  uflag1  uflag2  uflag3  sumflag       dist  \n",
-       "88209  0.0   0       0       0       0        67.451163  \n",
-       "88210  0.0   0       0       0       0        66.287123  \n",
-       "88211  0.0   0       0       0       0        67.686763  \n",
-       "88212  0.0   0       0       0       0        15.263467  \n",
-       "88213  0.0   0       0       0       0        21.817179  \n",
-       "88214  0.0   0       0       0       0        22.787503  \n",
+       "88209  0.0   0       0       0       0        67.442376  \n",
+       "88210  0.0   0       0       0       0        66.304016  \n",
+       "88211  0.0   0       0       0       0        67.708675  \n",
+       "88212  0.0   0       0       0       0        15.263146  \n",
+       "88213  0.0   0       0       0       0        21.840264  \n",
+       "88214  0.0   0       0       0       0        22.781041  \n",
        "88215  0.0   0       0       0       0        0.000000   \n",
-       "88216  0.0   0       0       0       0        30.717301  \n",
+       "88216  0.0   0       0       0       0        30.714067  \n",
        "88217  0.0   0       0       0       0        0.000000   \n",
-       "88218  0.0   0       0       0       0        21.091352  \n",
-       "88219  0.0   0       0       0       0        14.522443  \n",
-       "88220  0.0   0       0       0       0        83.814628  \n",
+       "88218  0.0   0       0       0       0        21.079976  \n",
+       "88219  0.0   0       0       0       0        14.498944  \n",
+       "88220  0.0   0       0       0       0        83.813702  \n",
        "88221  0.0   0       0       0       0        0.000000   \n",
-       "88222  0.0   0       0       0       0        33.196555  \n",
-       "88223  0.0   0       0       0       0        32.575626  \n",
-       "88224  0.0   0       0       0       0        12.339973  \n",
-       "88225  0.0   0       0       0       0        32.134112  \n",
+       "88222  0.0   0       0       0       0        33.212006  \n",
+       "88223  0.0   0       0       0       0        32.576129  \n",
+       "88224  0.0   0       0       0       0        12.310934  \n",
+       "88225  0.0   0       0       0       0        32.132279  \n",
        "88226  0.0   0       0       0       0        0.000000   \n",
-       "88227  0.0   0       0       0       0        44.945856  \n",
-       "88228  0.0   0       0       0       0        25.863792  "
+       "88227  0.0   0       0       0       0        44.933678  \n",
+       "88228  0.0   0       0       0       0        25.868391  "
       ]
      },
      "execution_count": 3,
@@ -540,6 +539,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--> Loading grid\n",
+      "Loading bus\n",
+      "Loading plant\n",
+      "Loading heat_rate_curve\n",
+      "Loading gencost_before\n",
+      "Loading gencost_after\n",
+      "Loading branch\n",
+      "Loading sub\n",
+      "Loading bus2sub\n",
       "--> Loading PF\n"
      ]
     }
@@ -547,7 +555,7 @@
    "source": [
     "grid = scenario.state.get_grid()\n",
     "pf = scenario.state.get_pf()\n",
-    "utilization = transmission.get_utilization(grid.branch, pf)"
+    "utilization = utilization.get_utilization(grid.branch, pf)"
    ]
   },
   {
@@ -556,7 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_transmission_map.map_utilization(utilization, grid.branch)"
+    "plot_utilization_map.map_utilization(utilization, grid.branch)"
    ]
   },
   {
@@ -565,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_transmission_map.map_binding(utilization, grid.branch)"
+    "plot_utilization_map.map_binding(utilization, grid.branch)"
    ]
   }
  ],
