chore: update import statements
References in demo notebook need to be updated

--- a/postreise/plot/demo/plot_carbon_map_demo.ipynb
+++ b/postreise/plot/demo/plot_carbon_map_demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Carbon Emissions Demo\n",
     "\n",
-    "1. Date: 10/31/2019\n",
+    "1. Updated: 4/7/2020\n",
     "2. Owner: Victoria Hunt"
    ]
   },
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from postreise.analyze import carbon\n",
+    "from postreise.analyze.generation import carbon\n",
     "from powersimdata.scenario.scenario import Scenario\n",
     "from postreise.plot import plot_carbon_map, plot_carbon_bar"
    ]
@@ -942,7 +942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
