fix: lmp speed up
segmentation code simplified, resulting in much faster plotting of lmps, important for website

fix: size_factor

remove print statements in lmp plot function, add size_factor for aesthetic improvement (ability to scale size of dots) in carbon mapping.

fix: simplify plotting

make map_risk_bind function plot either risk or bind map, depending on user input, rather than always plotting both

feat: interconnections mapping

fix: allow font change

allow font size changes on the plot_states function, which is used to color code state by renewables goals or other variables

fix: fix name of func in nb

fix: lmp speed up

segmentation code simplified, resulting in much faster plotting of lmps, important for website

fix: size_factor

remove print statements in lmp plot function, add size_factor for aesthetic improvement (ability to scale size of dots) in carbon mapping.

fix: simplify plotting

make map_risk_bind function plot either risk or bind map, depending on user input, rather than always plotting both

feat: interconnections mapping

fix: allow font change

allow font size changes on the plot_states function, which is used to color code state by renewables goals or other variables

fix: fix name of func in nb

--- a/postreise/plot/demo/plot_lmp.ipynb
+++ b/postreise/plot/demo/plot_lmp.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "from powersimdata.scenario.scenario import Scenario  \n",
-    "from postreise.plot.plot_lmp import plot_lmp"
+    "from postreise.plot.plot_lmp import map_lmp"
    ]
   },
   {
@@ -446,7 +446,7 @@
     }
    ],
    "source": [
-    "plot_lmp(s_grid,  lmp)"
+    "map_lmp(s_grid,  lmp)"
    ]
   }
  ],
